# autopatchd

./: README.md  autopatchd-clean.sh  autopatchd-mail.sh  autopatchd-status.sh  autopatchd.sh  pyproject.toml
Archive/autopatchd/: __main__.py  cli.py  crypto.py  patcher.py  reporter.py  systemd.py
etc/logrotate.d/: autopatchd
scripts/: logrotate.conf
src/autopatchd/: __init__.py  cli.py  config.py  hooks.py  mailer.py  patcher.py  reporter.py  runner.py  systemd.py  utils.py
systemd/: autopatchd.service.in  autopatchd.timer.in
templates/: config.yaml
